--- a/c-food/build.gradle
+++ b/c-food/build.gradle
@@ -8,8 +8,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
-        
+        classpath 'com.amazonaws:aws-android-sdk-appsync-gradle-plugin:2.9.+'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,10 +19,11 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
