sample code for interacting dynamo db

--- a/c-food/app/build.gradle
+++ b/c-food/app/build.gradle
@@ -38,8 +38,16 @@ dependencies {
     implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.1.0'
     implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
     implementation('com.amazonaws:aws-android-sdk-iot:2.15.+@aar') { transitive = true }
+
+    // Sign in UI Library
+    implementation 'com.android.support:appcompat-v7:28.+'
+    implementation ('com.amazonaws:aws-android-sdk-auth-ui:2.15.+@aar') { transitive = true }
+
     //For AWSMobileClient only:
     implementation 'com.amazonaws:aws-android-sdk-mobile-client:2.16.+'
+
+    implementation 'com.amazonaws:aws-android-sdk-ddb:2.4.4'
+    implementation 'com.amazonaws:aws-android-sdk-ddb-document:2.4.4'
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
