--- a/c-food/build.gradle
+++ b/c-food/build.gradle
@@ -9,7 +9,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.amazonaws:aws-android-sdk-appsync-gradle-plugin:2.9.+'
-
+        classpath 'com.apollographql.apollo:apollo-gradle-plugin:1.0.0'
+        classpath 'com.android.tools.build:gradle:3.5.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
