--- a/c-food/app/src/main/AndroidManifest.xml
+++ b/c-food/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.c_food">
 
     <application
+        android:name=".AmplifyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
