--- a/c-food-main/amplify/backend/auth/cfoodmain7c445492/cfoodmain7c445492-cloudformation-template.yml
+++ b/c-food-main/amplify/backend/auth/cfoodmain7c445492/cfoodmain7c445492-cloudformation-template.yml
@@ -82,19 +82,10 @@ Parameters:
                                       
   useDefault:
     Type: String
-              
-  triggers:
-    Type: String
                       
   userPoolGroupList:
     Type: CommaDelimitedList
-                        
-  parentStack:
-    Type: String
-                
-  permissions:
-    Type: CommaDelimitedList
-              
+                          
   dependsOn:
     Type: CommaDelimitedList
     
@@ -109,7 +100,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'cfoodm9fb35ba8_sns-role', !Join ['',[ 'sns', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'cfoodm7c445492_sns-role', !Join ['',[ 'sns', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument: 
         Version: "2012-10-17"
         Statement: 
@@ -121,10 +112,10 @@ Resources:
               - "sts:AssumeRole"
             Condition: 
               StringEquals:
-                sts:ExternalId: cfoodm9fb35ba8_role_external_id
+                sts:ExternalId: cfoodm7c445492_role_external_id
       Policies: 
         - 
-          PolicyName: cfoodm9fb35ba8-sns-policy
+          PolicyName: cfoodm7c445492-sns-policy
           PolicyDocument: 
             Version: "2012-10-17"
             Statement: 
@@ -170,27 +161,15 @@ Resources:
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsConfiguration: 
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: cfoodm9fb35ba8_role_external_id
+        ExternalId: cfoodm7c445492_role_external_id
     
-  
-    
-    
-  
-    
-    
-  
-  
-   
-    
-  # Updating lambda role with permissions to Cognito
-  
   
   UserPoolClientWeb:
   # Created provide application access to user pool
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: cfoodm9fb35ba8_app_clientWeb
+      ClientName: cfoodm7c445492_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -200,7 +179,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: cfoodm9fb35ba8_app_client
+      ClientName: cfoodm7c445492_app_client
       
       GenerateSecret: !Ref userpoolClientGenerateSecret
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
@@ -265,7 +244,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: cfoodm9fb35ba8_userpoolclient_lambda_iam_policy
+      PolicyName: cfoodm7c445492_userpoolclient_lambda_iam_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -282,7 +261,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: cfoodm9fb35ba8_userpoolclient_lambda_log_policy
+      PolicyName: cfoodm7c445492_userpoolclient_lambda_log_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -322,7 +301,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties: 
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'cfoodmain9fb35ba8_identitypool_9fb35ba8', !Join ['',['cfoodmain9fb35ba8_identitypool_9fb35ba8', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'cfoodmain7c445492_identitypool_7c445492', !Join ['',['cfoodmain7c445492_identitypool_7c445492', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
