--- a/c-food-main/amplify/backend/backend-config.json
+++ b/c-food-main/amplify/backend/backend-config.json
@@ -1,9 +1,10 @@
 {
 	"auth": {
-		"cfoodmain9fb35ba8": {
+		"cfoodmain7c445492": {
 			"service": "Cognito",
 			"providerPlugin": "awscloudformation",
-			"dependsOn": []
+			"dependsOn": [],
+			"customAuth": false
 		}
 	}
 }
