--- a/c-food-main/build.gradle
+++ b/c-food-main/build.gradle
@@ -6,12 +6,16 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.0"
-
+        //classpath 'com.android.tools.build:gradle:4.0.0'
+        classpath 'com.amazonaws:aws-android-sdk-appsync-gradle-plugin:2.9.+'
+        classpath 'com.apollographql.apollo:apollo-gradle-plugin:1.0.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        // https://mvnrepository.com/artifact/com.android.tools.build/gradle
+        classpath 'com.android.tools.build:gradle:3.6.3'
     }
 }
+
 
 allprojects {
     repositories {
