--- a/c-food-main/app/src/main/AndroidManifest.xml
+++ b/c-food-main/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SignUp"></activity>
+        <activity android:name=".CodeConfirm"></activity>
+        <activity android:name=".SignUp" />
         <activity android:name=".Login" />
         <activity android:name=".Dashboard" />
         <activity android:name=".ConfirmCodeActivity" />
