change file .gitignore

--- a/c-food-main/.gitignore
+++ b/c-food-main/.gitignore
@@ -26,3 +26,5 @@ aws-exports.js
 amplify-build-config.json
 amplify-gradle-config.json
 amplifyxc.config
+amplifyconfiguration.json
+awsconfiguration.json
