--- a/c-food-main/app/build.gradle
+++ b/c-food-main/app/build.gradle
@@ -56,5 +56,10 @@ dependencies {
     //AweSomeValidation
     implementation 'com.github.thyrlian:AwesomeValidation:v4.2'
 
+    //RecycleView
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+    //CardView
+    implementation 'com.android.support:cardview-v7:28.0.0'
 
 }
