--- a/c-food-main/app/build.gradle
+++ b/c-food-main/app/build.gradle
@@ -46,7 +46,7 @@ dependencies {
 
     //Amplify dependencies
     implementation 'com.amplifyframework:core:1.0.0'
-
+    implementation 'com.amplifyframework:aws-api:1.0.0'
     //Amplify auth dependencies
     implementation 'com.amplifyframework:aws-auth-cognito:1.0.0'
 
