build cardview (trending/feedback) , build UI feedback

--- a/c-food-main/app/src/main/AndroidManifest.xml
+++ b/c-food-main/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".ChangePasswordActivity" />
         <activity android:name=".ForgetPasswordActivity" />
         <activity android:name=".ProfileActivity" />
+        <activity android:name=".FeedbackActivity"></activity>
         <activity android:name=".FoodDetailActivity" />
         <activity android:name=".SearchFoodActivity" />
         <activity android:name=".ConfirmCodeActivity" />
