--- a/c-food-main/app/build.gradle
+++ b/c-food-main/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
     testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:design:28.0.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     //Base SDK
@@ -39,6 +40,10 @@ dependencies {
     implementation 'com.amazonaws:aws-android-sdk-appsync:2.9.+'
     implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.1.0'
     implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
+
+    implementation 'com.android.support:multidex:1.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.facebook.fresco:fresco:0.12.0'
     implementation('com.amazonaws:aws-android-sdk-iot:2.15.+@aar') { transitive = true }
 
     //For AWSMobileClient only:
