--- a/c-food-main/app/src/main/AndroidManifest.xml
+++ b/c-food-main/app/src/main/AndroidManifest.xml
@@ -17,12 +17,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.FindPasswordActivity"></activity>
+        <activity android:name=".activity.MealActivity"></activity>
+        <activity android:name=".activity.FavoriteFoodActivity" />
+        <activity android:name=".activity.TrendingActivity" />
+        <activity android:name=".activity.FindPasswordActivity" />
         <activity android:name=".activity.ChangePasswordActivity" />
         <activity android:name=".activity.ForgetPasswordActivity" />
         <activity android:name=".activity.ProfileActivity" />
-        <activity android:name=".activity.FeedbackActivity"></activity>
-        <activity android:name=".activity.CategoriesActivity"></activity>
+        <activity android:name=".activity.FeedbackActivity" />
+        <activity android:name=".activity.CategoriesActivity" />
         <activity android:name=".activity.FoodDetailActivity" />
         <activity android:name=".activity.SearchFoodActivity" />
         <activity android:name=".activity.ConfirmCodeActivity" />
